--- a/design-doc.org
+++ b/design-doc.org
@@ -102,3 +102,16 @@ The loader makes use of something called the /data path/. The data path (see [[*
 
 1. If the user has root privileges, the system directory is chosen (~/usr/local/etc~).
 2. If the user does not have root privileges, the path becomes ~$HOME/.local/etc~, where ~$HOME~ is the user's home directory.
+
+** Rules
+
+A rule is a configuration file that provides arguments to actions. They are implemented using the /adapter pattern/. Rules are represented by the ~Rule~ class. ~Rule~ is the client of the adapter pattern. It holds an instance of ~ConfigFile~. The ~Rule~ constructor accepts a filename and a string mode. The mode string can be either ~w~ or ~r~. If it is ~w~, placeholder data is written to the config file.
+
+~ConfigFile~ is the interface of the adapter pattern. It defines a function called ~parse_file()~ which accepts a file path and returns a dictionary.
+
+~XFile~ is the adapter in the adapter pattern, and ~xlib~ is the adaptee. ~XFile~ uses ~xlib~ to plug in the functionality fir a specific configuration file format into the client. ~XFile~ must be compatible with the ~ConfigFile~ protocol.
+
+#+attr_latex: :width 12cm
+[[file:images/rule-adapter.png]]
+
+#  [![](https://mermaid.ink/img/pako:eNqdUsFu2zAM_RWBp6ZRglp2msZocumw2zBguwyFgIGV6VSoLBmSPDTN0m-fbCdF0uN0EfFEvvdIcQ_KVQQlKIMhfNG49dhIy9IZEPajM8T2I9Kf-3tlNNm42UgrY49MlbMhsgdna739qlO6GsKxRsZpT3EVotd2y-r0brEhzo5Ak-TXEryEyQfhluIp_4V2nP1Br9FGVlGNnYlr2xnD2ZNzhgWsaV2jCTQ5pY26h8R21saZu4tmtI3ka1TU93OCpy36QL97r599T1ilVXwfUX5UfP-Q7K9hYrPZNZOQSThXLtkzBqbTtNAqYq6-9Pjrs73_9zEGI-F8_ndz6cITGv1GgbXeRaecORW8Gv2U3qehJaVrrb635DFqZ6_SdJ2uzrKuZ7ORX1rg0JBvUFdpjwb7EuIzNSShTGHtPIUoQdpDysQuup87q6CMviMOXVthpOPiQTl8JYcWLZR7eIUyE8V8JbK7xWpZZCK7WRUcdlCK4naeZ6ssXy6WuSiEOHB4cy4x3Mxv87sEiKJY5LnIcsGBKh2d_3bc9P4aJB6Hgt7H4R_ITPj_?type=png)](http://localhost:5005/edit#pako:eNqdUsFu2zAM_RWBp6ZRglp2msZocumw2zBguwyFgIGV6VSoLBmSPDTN0m-fbCdF0uN0EfFEvvdIcQ_KVQQlKIMhfNG49dhIy9IZEPajM8T2I9Kf-3tlNNm42UgrY49MlbMhsgdna739qlO6GsKxRsZpT3EVotd2y-r0brEhzo5Ak-TXEryEyQfhluIp_4V2nP1Br9FGVlGNnYlr2xnD2ZNzhgWsaV2jCTQ5pY26h8R21saZu4tmtI3ka1TU93OCpy36QL97r599T1ilVXwfUX5UfP-Q7K9hYrPZNZOQSThXLtkzBqbTtNAqYq6-9Pjrs73_9zEGI-F8_ndz6cITGv1GgbXeRaecORW8Gv2U3qehJaVrrb635DFqZ6_SdJ2uzrKuZ7ORX1rg0JBvUFdpjwb7EuIzNSShTGHtPIUoQdpDysQuup87q6CMviMOXVthpOPiQTl8JYcWLZR7eIUyE8V8JbK7xWpZZCK7WRUcdlCK4naeZ6ssXy6WuSiEOHB4cy4x3Mxv87sEiKJY5LnIcsGBKh2d_3bc9P4aJB6Hgt7H4R_ITPj_)
