Design doc: 'Update Technical Specification->Templates'

--- a/design-doc.org
+++ b/design-doc.org
@@ -115,3 +115,7 @@ A rule is a configuration file that provides arguments to actions. They are impl
 [[file:images/rule-adapter.png]]
 
 #  [![](https://mermaid.ink/img/pako:eNqdUsFu2zAM_RWBp6ZRglp2msZocumw2zBguwyFgIGV6VSoLBmSPDTN0m-fbCdF0uN0EfFEvvdIcQ_KVQQlKIMhfNG49dhIy9IZEPajM8T2I9Kf-3tlNNm42UgrY49MlbMhsgdna739qlO6GsKxRsZpT3EVotd2y-r0brEhzo5Ak-TXEryEyQfhluIp_4V2nP1Br9FGVlGNnYlr2xnD2ZNzhgWsaV2jCTQ5pY26h8R21saZu4tmtI3ka1TU93OCpy36QL97r599T1ilVXwfUX5UfP-Q7K9hYrPZNZOQSThXLtkzBqbTtNAqYq6-9Pjrs73_9zEGI-F8_ndz6cITGv1GgbXeRaecORW8Gv2U3qehJaVrrb635DFqZ6_SdJ2uzrKuZ7ORX1rg0JBvUFdpjwb7EuIzNSShTGHtPIUoQdpDysQuup87q6CMviMOXVthpOPiQTl8JYcWLZR7eIUyE8V8JbK7xWpZZCK7WRUcdlCK4naeZ6ssXy6WuSiEOHB4cy4x3Mxv87sEiKJY5LnIcsGBKh2d_3bc9P4aJB6Hgt7H4R_ITPj_?type=png)](http://localhost:5005/edit#pako:eNqdUsFu2zAM_RWBp6ZRglp2msZocumw2zBguwyFgIGV6VSoLBmSPDTN0m-fbCdF0uN0EfFEvvdIcQ_KVQQlKIMhfNG49dhIy9IZEPajM8T2I9Kf-3tlNNm42UgrY49MlbMhsgdna739qlO6GsKxRsZpT3EVotd2y-r0brEhzo5Ak-TXEryEyQfhluIp_4V2nP1Br9FGVlGNnYlr2xnD2ZNzhgWsaV2jCTQ5pY26h8R21saZu4tmtI3ka1TU93OCpy36QL97r599T1ilVXwfUX5UfP-Q7K9hYrPZNZOQSThXLtkzBqbTtNAqYq6-9Pjrs73_9zEGI-F8_ndz6cITGv1GgbXeRaecORW8Gv2U3qehJaVrrb635DFqZ6_SdJ2uzrKuZ7ORX1rg0JBvUFdpjwb7EuIzNSShTGHtPIUoQdpDysQuup87q6CMviMOXVthpOPiQTl8JYcWLZR7eIUyE8V8JbK7xWpZZCK7WRUcdlCK4naeZ6ssXy6WuSiEOHB4cy4x3Mxv87sEiKJY5LnIcsGBKh2d_3bc9P4aJB6Hgt7H4R_ITPj_)
+
+** Templates
+
+The ~template~ subpackage creates actions and rules. In the case of actions, they are created using templates. ~write_action_file()~ accepts a path to the file to be created, and the name of the action. Rules are written via ~write_rule_file()~, which accepts a path to the file to be created, and the name of the rule.
